<resources>
    <string name="app_name">SignUpForm</string>
    <string name="first_element">Username:</string>
    <string name="hello_world">Hello World!</string>
    <string name="submit_button">SUBMIT</string>
    <string name="hint_text">Please enter your username</string>
    <string name="Password">Password:</string>
    <string name="hint_password">Please enter your password</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="confirmation_password">Please confirm password</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="welcome_format">Welcome %1$s!</string>
</resources>
