<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/first_element"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/text_view"
                android:layout_weight="75"
                android:hint="@string/hint_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_view1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/Password"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edit_text1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/text_view"
                android:layout_weight="75"
                android:hint="@string/hint_password" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_view2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/confirm_password"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edit_text2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/text_view"
                android:layout_weight="75"
                android:hint="@string/confirmation_password" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/fields"
        android:layout_below="@+id/fields"
        android:text="@string/submit_button" />
</RelativeLayout>
